--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: docker/flask_league_app/**
           file: ./dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/pythonflask:latest
